# renda-passiva-acoes-fiis

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  netlify.toml  pyproject.toml  requirements.txt
.github/workflows/: anchors.yml  fundamentos.yml  ingest.yml  prices.yml
config/: columns.yml  contas.yml  shares_anchor.yml  watchlist.yml
data/: fatos_relevantes.json  fatos_relevantes.parquet  fiagro.json  fiagro.parquet  fiagro_score.json  fiagro_score.parquet  fii_dy.json  fii_dy.parquet  fii_fundos.json  fii_fundos.parquet  fii_score.json  fii_score.parquet  fii_vacancia.json  fii_vp.json  fii_vp.parquet  fundamentos.json  fundamentos.parquet  macro.json  prices.json  prices.parquet  score.json  score.parquet
docs/: HANDOFF.md  STATUS.md  prices-methodology.md
pipeline/: __init__.py  columns.py  cvm.py  export.py  fiagro.py  fii.py  fnet.py  fundamentos.py  ipe.py  macro.py  metrics.py  normalize.py  prices.py  score.py
scripts/: build_score.py  fetch_anchors.py  fetch_macro.py  fetch_prices.py  ingest_fiagro.py  ingest_fii.py  ingest_fii_dy.py  ingest_fii_fundos.py  ingest_fii_vacancia.py  ingest_fundamentos.py  ingest_ipe.py  inspect_zip.py
tests/: conftest.py  test_columns.py  test_export.py  test_fiagro.py  test_fii.py  test_fnet.py  test_fundamentos.py  test_ipe.py  test_macro.py  test_metrics.py  test_normalize.py  test_prices.py  test_score.py
tests/data/: dfp_bpp_sample.csv  dfp_composicao_capital_sample.csv  dfp_dfc_sample.csv  dfp_dmpl_sample.csv  dfp_dre_sample.csv  ipe_sample.csv  (+3 more)
web/: next.config.mjs  package-lock.json  package.json
(+6 files in other folders)
