[project]
name = "divbr"
version = "0.1.0"
description = "divbr — inteligência de renda passiva na B3 (ações, FIIs e FIAgros)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15",
    "pyyaml>=6",
    "requests>=2.31",
]

[project.optional-dependencies]
prices = [
    "yfinance>=0.2.40",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["pipeline*"]
